<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5E8B4747"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="204dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:fontFamily="monospace"
        android:text="@string/Main_menu"
        android:textAllCaps="false"
        android:textColor="#3A0400"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/donutButton"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="248dp"
        android:background="#FF63C6"
        android:text="@string/Order_donuts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/coffeeButton"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="40dp"
        android:background="#6AB62A00"
        android:text="@string/Order_coffee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/orderButton"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="436dp"
        android:background="#FF8787"
        android:text="@string/Order_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/storeButton"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="436dp"
        android:layout_marginEnd="40dp"
        android:background="#00BCD4"
        android:text="@string/Store_Orders"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="220dp"
        android:layout_height="97dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="96dp"
        android:contentDescription="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/download" />

</androidx.constraintlayout.widget.ConstraintLayout>